# types/book_type.go
@@ -1,0 +1,7 @@
+package types
+
+type BuyBook struct {
+	ID     int32
+	Name   string
+	Amount int32
+}
